add approval api for user apply tidb
